Mod adjustments - HardcoreDarkness UndergroundBiomes and SpecialMobs

--- a/config/undergroundbiomes.cfg
+++ b/config/undergroundbiomes.cfg
@@ -70,7 +70,7 @@ specific {
 
     # What styles of stone for buttons : +1 for stone, +2 for cobble and +4 for brick
     # Default : 3 -> stone and cobble
-    I:UndergroundBiomesButtonsStyles=3
+    I:UndergroundBiomesButtonsStyles=7
 
     # What types of stone for buttons : +1 for igneous, +2 for metamorphic and +4 for sedimentary
     # Default: 7 -> all
@@ -155,7 +155,7 @@ visual {
 
     # Integrate vanilla stone into the world generation
     # Will cause sharp biome transitions if changed while playing the same world
-    B:RegularStoneBiomes=false
+    B:RegularStoneBiomes=true
 
     # Replace clay with UBC variants.
     B:ReplacClay=true
