--- a/config/Special_Mobs.cfg
+++ b/config/Special_Mobs.cfg
@@ -236,7 +236,7 @@ creepers {
     # This enables all of the mod's options that apply to special variants to also apply to vanilla mobs,
     # in addition to all the nbt editing capabilities that special mobs have.
     #    >> Boolean:[ Valid_Values={ true, false }, Default=true ]
-    B:_replace_vanilla=true
+    B:_replace_vanilla=false
 
     # The chance for creepers to spawn as special variants.
     #    >> Float:[ Range={ 0.0, 1.0 }, Default=0.6 ]
