Deleted mods and disabled Plants overwriting the flowerpot.

--- a/config/plants.cfg
+++ b/config/plants.cfg
@@ -113,7 +113,7 @@ general {
     I:"Crop Growth Chance"=15
 
     # If enabled, the vanilla flowerpot is overridden with a much more versatile flowerpot. [default: true]
-    B:"Enable Flowerpot"=true
+    B:"Enable Flowerpot"=false
 
     # If false, all harvestable bushes will not produce anything, and crops will be disabled. [default: true]
     B:"Enable Harvests"=true
