Unfortunately deleted UndergroundBiomes to avoid crash

--- a/config/undergroundbiomes.cfg
+++ b/config/undergroundbiomes.cfg
@@ -15,7 +15,7 @@ content {
     D:ResistanceModifier=1.0
 
     # Convert ores to have Underground Biomes stone background textures
-    B:UBifyOres=true
+    B:UBifyOres=false
 
     # Modify all recipes to include Underground Biomes stones
     B:UBifyRecipes=true
@@ -109,10 +109,10 @@ visual {
 "world generation" {
     # Interval [1-16]
     # Warning: exponential
-    I:BiomeSize=4
+    I:BiomeSize=2
 
     # Use a different seed for each dimensions
-    B:DimensionSpecificSeeds=false
+    B:DimensionSpecificSeeds=true
 
     # Comma-separated list of dimension IDs, used only if include list is *
     S:ExcludedDimensions=-1,1
