Hunger Overhaul changes +

--- a/config/sgcraft.cfg
+++ b/config/sgcraft.cfg
@@ -110,11 +110,13 @@ player-access {
 
 
 recipes {
+    B:gdo=true
     B:genericCapacitorItem=true
     B:naquadah=false
     B:naquadahBlock=true
     B:naquadahIngot=true
     B:naquadahIngotFromBlock=true
+    B:pdd=true
     B:pegasus_upgrade=true
     B:pegasus_upgrade_require_crystal=true
     B:sgBaseBlock=true
@@ -158,6 +160,7 @@ stargate {
     B:transientDamage=true
     B:transparency=true
     B:variableChevronPositions=true
+    B:wormholeCanDestroyUnbreakableBlocks=false
 }
 
 
@@ -165,3 +168,5 @@ zpm-power {
     B:force-update=false
     D:zpmEnergyPerSGEnergyUnit=80.0
 }
+
+
