--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -3,42 +3,35 @@
 ~CONFIG_VERSION: 0.1.0
 
 world-1683192042 {
+    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=false
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=
+    S:filterText=flint
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
 
 world-1701440762 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
+    B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=fire bow
-
-    # Show the list of ingredients next to open GUIs.
+    S:filterText=iron
     B:overlayEnabled=true
 }
 
 
 world-697844060 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
-
-    # Hide and unhide ingredients by clicking them in the list.
+    B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=
-
-    # Show the list of ingredients next to open GUIs.
+    S:filterText=tanned
     B:overlayEnabled=true
 }
 
