Mainly UnderArmor compatibility, also wendigo enabling

--- a/config/cannibalism.cfg
+++ b/config/cannibalism.cfg
@@ -6,12 +6,12 @@ general {
     I:"Blood Spawn Amount"=36
 
     # Set true cause myths about cannibalism to become real. [default: false]
-    B:"Enable Mythological Mode"=false
+    B:"Enable Mythological Mode"=true
 
     # Disable the screaming sound that players makes when the knife is used [default: false]
     B:"Mute Scream Sound"=false
 
-    # High Pinch or Low Pinch, up to you ;) [range: -10.0 ~ 10.0, default: 0.7]
+    # High Pitch or Low Pitch, up to you ;) [range: -10.0 ~ 10.0, default: 0.7]
     S:"Scream Pitch"=0.7
 
     # Replace the default screaming sound with the one provided in a resource pack [default: false]
