--- a/config/f&e.cfg
+++ b/config/f&e.cfg
@@ -62,7 +62,7 @@ mobs {
     B:"Enable Expanded Cats"=false
 
     # Set to true to enable new horses, donkeys, zebras, hybrids and quaggas [default: true]
-    B:"Enable Expanded Equines"=true
+    B:"Enable Expanded Equines"=false
 
     # Set to true to enable new junglefowl, chickens and ducks [default: true]
     B:"Enable Expanded Fowls"=true
