--- a/config/fossil.cfg
+++ b/config/fossil.cfg
@@ -44,7 +44,7 @@ all {
     B:"Feathered Deinonychus"=true
 
     # True if Dryosaurus should be represented with plumage [default: false]
-    B:"Feathered Dryosaurus"=false
+    B:"Feathered Dryosaurus"=true
 
     # True if Gallimimus is accurate to science and not a fake movie monster or a relic of past age of scientific progress [default: true]
     B:"Feathered Gallimimus"=true
@@ -83,7 +83,7 @@ all {
     B:"Generate Moai"=true
 
     # True if Palaeoraphe Trees are to generate naturally [default: false]
-    B:"Generate Palaeoraphe"=false
+    B:"Generate Palaeoraphe"=true
 
     # True if Permafrost Ore is to generate naturally [default: true]
     B:"Generate Permafrost"=true
@@ -119,7 +119,7 @@ all {
     I:"Pregnancy TIme"=10000
 
     # True if Triceratops should have quills like some of its ancestors [default: false]
-    B:"Quilled Triceratops"=false
+    B:"Quilled Triceratops"=true
 
     # True if Alligator Gars are to spawn naturally in swamps [default: true]
     B:"Spawn Alligator Gar"=true
@@ -137,7 +137,7 @@ all {
     B:"Spawn Tar Slimes"=true
 
     # True if Dinosaurs have hunger [default: true]
-    B:"Starving Dinos"=true
+    B:"Starving Dinos"=false
 
     # Chance of Sturgeon spawning in a new chunks. Higher number = more rare [range: 1 ~ 100000000, default: 4]
     I:"Sturgeon Spawn Rarity"=4
