--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -2,18 +2,20 @@
 
 ~CONFIG_VERSION: 0.1.0
 
-world-1683192042 {
-    # Show the list of bookmarks next to open GUIs.
+world-1535938722 {
     B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=iron sword
+    B:overlayEnabled=true
+}
 
-    # Give items instead of showing the recipe.
+
+world-1683192042 {
+    B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=flint
-
-    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -22,7 +24,7 @@ world-1701440762 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=iron
+    S:filterText=rabb
     B:overlayEnabled=true
 }
 
@@ -31,13 +33,29 @@ world-697844060 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=tanned
+    S:filterText=
     B:overlayEnabled=true
 }
 
 
 world1544803905 {
     S:filterText=
+}
+
+
+world1885066191 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=armor
+
+    # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
 }
 
 
