--- a/config/wabbity_armorunder.cfg
+++ b/config/wabbity_armorunder.cfg
@@ -13,7 +13,7 @@ general {
     B:include_goopaks=true
 
     # Set to true to enable special liners including their damage mitigation features. These items are available only as loot rewards in the standalone mod. Disabled by default; requires restart if changed in-game.
-    B:include_special_liners=false
+    B:include_special_liners=true
 
     # Set to true to include crafting recipes for items that are normally obtained through other mechanisms like looting or advancements. By default, only the ToughAsNails temperature-related 'Ozzy' liners are craftable. [default: *DEFAULT*]
     S:special_liners_craftable=*DEFAULT*
@@ -38,26 +38,365 @@ general {
 integration {
     # Set to the full IDs of all modded boots that can be worn over lining up to 3 layers thick (actual max thickness depends on armor piece). Some examples shown. Requires a restart if changed in-game. [default: [basemetals:coldiron_boots], [cyclicmagic:purple_boots]]
     S:boots <
+		toughasnails:jelled_slime_boots
+		toughasnails:wool_boots
+        primal:armor_ovis_feet
+		primal:armor_wolf_feet
+		primal:armor_obsidian_feet
         basemetals:coldiron_boots
         cyclicmagic:purple_boots
+        iceandfire:armor_blue_boots
+        iceandfire:armor_bronze_boots
+        iceandfire:armor_gray_boots
+        iceandfire:armor_green_boots
+        iceandfire:armor_red_boots
+        iceandfire:armor_sapphire_boots
+        iceandfire:armor_silver_boots
+        iceandfire:armor_white_boots
+        iceandfire:deathworm_red_boots
+        iceandfire:deathworm_white_boots
+        iceandfire:deathworm_yellow_boots
+        iceandfire:forest_troll_leather_boots
+        iceandfire:frost_troll_leather_boots
+        iceandfire:mountain_troll_leather_boots
+        iceandfire:tide_blue_boots
+        iceandfire:tide_bronze_boots
+        iceandfire:tide_deepblue_boots
+        iceandfire:tide_green_boots
+        iceandfire:tide_purple_boots
+        iceandfire:tide_red_boots
+        iceandfire:tide_teal_boots
+        iceandfire:sheep_boots
+		iceandfire:myrmex_jungle_boots
+		iceandfire:myrmex_desert_boots
+		iceandfire:armor_silver_metal_boots
+		roots:sylvan_boots
+roots:wildwood_boots
+fossil:feet_boots
+erebus:jump_boots
+erebus:bamboo_boots
+erebus:rhino_exoskeleton_boots
+erebus:rein_exoskeleton_boots
+erebus:exoskeleton_boots
+erebus:jade_boots
+erebus:water_striders
+compositegear:composite_boots
+compositegear:composite_heavy_boots
+compositegear:composite_light_boots
+compositegear:padded_boots
+compositegear:felt_boots
+bloodmagic:sentient_armour_boots
+bloodmagic:living_armour_boots
+basemetals:obsidian_boots
+basemetals:emerald_boots
+basemetals:quartz_boots
+basemetals:antimony_boots
+basemetals:bismuth_boots
+basemetals:copper_boots
+basemetals:lead_boots
+basemetals:nickel_boots
+basemetals:silver_boots
+basemetals:tin_boots
+basemetals:zinc_boots
+basemetals:brass_boots
+basemetals:bronze_boots
+basemetals:cupronickel_boots
+basemetals:electrum_boots
+basemetals:invar_boots
+basemetals:pewter_boots
+basemetals:steel_boots
+basemetals:adamantine_boots
+basemetals:platinum_boots
+basemetals:starsteel_boots
+basemetals:aquarium_boots
+basemetals:mithril_boots
+twilightforest:ironwood_boots
+twilightforest:fiery_boots
+twilightforest:steeleaf_boots
+twilightforest:knightmetal_boots
+twilightforest:yeti_boots
+twilightforest:arctic_boots
+iymts_mod:rniytamahaganeboots
+iymts_mod:rniydamascussteelboots
+iymts_mod:rniyheavydamascussteelboots
      >
 
     # Set to the full IDs of all modded chestplates that can be worn over lining up to 3 layers thick (actual max thickness depends on armor piece). Some examples shown. Requires a restart if changed in-game. [default: [basemetals:coldiron_chestplate], [cyclicmagic:purple_chestplate]]
     S:chestplate <
+		toughasnails:jelled_slime_chestplate
+		toughasnails:wool_chestplate
+        primal:armor_ovis_body
+		primal:armor_wolf_body
+		primal:armor_obsidian_body
         basemetals:coldiron_chestplate
         cyclicmagic:purple_chestplate
+		bloodmagic:pack_sacrifice
+		bloodmagic:pack_self_sacrifice
+		compositegear:wool_jersey
+compositegear:padded_chestplate
+erebus:glider_chestplate
+erebus:glider_chestplate_powered
+erebus:spider_t_shirt
+fossil:skull_chestplate
+twilightforest:naga_chestplate
+twilightforest:phantom_chestplate
+        iceandfire:armor_blue_chestplate
+        iceandfire:armor_bronze_chestplate
+        iceandfire:armor_gray_chestplate
+        iceandfire:armor_green_chestplate
+        iceandfire:armor_red_chestplate
+        iceandfire:armor_sapphire_chestplate
+        iceandfire:armor_silver_chestplate
+        iceandfire:armor_white_chestplate
+        iceandfire:deathworm_red_chestplate
+        iceandfire:deathworm_white_chestplate
+        iceandfire:deathworm_yellow_chestplate
+        iceandfire:forest_troll_leather_chestplate
+        iceandfire:frost_troll_leather_chestplate
+        iceandfire:mountain_troll_leather_chestplate
+        iceandfire:tide_blue_chestplate
+        iceandfire:tide_bronze_chestplate
+        iceandfire:tide_deepblue_chestplate
+        iceandfire:tide_green_chestplate
+        iceandfire:tide_purple_chestplate
+        iceandfire:tide_red_chestplate
+        iceandfire:tide_teal_chestplate
+        iceandfire:sheep_chestplate
+		iceandfire:myrmex_jungle_chestplate
+		iceandfire:myrmex_desert_chestplate
+		iceandfire:armor_silver_metal_chestplate
+		roots:sylvan_chestplate
+roots:wildwood_chestplate
+erebus:jump_chestplate
+erebus:bamboo_chestplate
+erebus:rhino_exoskeleton_chestplate
+erebus:rein_exoskeleton_chestplate
+erebus:exoskeleton_chestplate
+erebus:jade_chestplate
+compositegear:composite_chestplate
+compositegear:composite_heavy_chestplate
+compositegear:composite_light_chestplate
+compositegear:padded_chestplate
+compositegear:felt_chestplate
+bloodmagic:sentient_armour_chestplate
+bloodmagic:living_armour_chestplate
+basemetals:obsidian_chestplate
+basemetals:emerald_chestplate
+basemetals:quartz_chestplate
+basemetals:antimony_chestplate
+basemetals:bismuth_chestplate
+basemetals:copper_chestplate
+basemetals:lead_chestplate
+basemetals:nickel_chestplate
+basemetals:silver_chestplate
+basemetals:tin_chestplate
+basemetals:zinc_chestplate
+basemetals:brass_chestplate
+basemetals:bronze_chestplate
+basemetals:cupronickel_chestplate
+basemetals:electrum_chestplate
+basemetals:invar_chestplate
+basemetals:pewter_chestplate
+basemetals:steel_chestplate
+basemetals:adamantine_chestplate
+basemetals:platinum_chestplate
+basemetals:starsteel_chestplate
+basemetals:aquarium_chestplate
+basemetals:mithril_chestplate
+twilightforest:ironwood_chestplate
+twilightforest:fiery_chestplate
+twilightforest:steeleaf_chestplate
+twilightforest:knightmetal_chestplate
+twilightforest:yeti_chestplate
+twilightforest:arctic_chestplate
+iymts_mod:rniytamahaganechestplate
+iymts_mod:rniydamascussteelchestplate
+iymts_mod:rniyheavydamascussteelchestplate
      >
 
     # Set to the full IDs of all modded helmets that can be worn over lining up to 3 layers thick (actual max thickness depends on armor piece). Some examples shown. Requires a restart if changed in-game. [default: [basemetals:coldiron_helmet], [cyclicmagic:purple_helmet]]
     S:helmet <
+		toughasnails:jelled_slime_helmet
+		toughasnails:wool_helmet
+        primal:armor_ovis_head
+		primal:armor_wolf_head
+		primal:armor_obsidian_head
         basemetals:coldiron_helmet
         cyclicmagic:purple_helmet
+		compositegear:rubber_gasmask
+		compositegear:respirator_mask_composite
+compositegear:respirator_mask
+compositegear:respirator_halfmask
+compositegear:ushanka_hat
+compositegear:shemagh_mask
+compositegear:balaclava_mask
+compositegear:padded_helmet
+compositegear:composite_faceplate
+erebus:rein_compound_goggles
+erebus:compound_goggles
+erebus:mushroom_helmet
+fossil:skull_helmet
+fossil:ancient_helmet
+twilightforest:phantom_helmet
+        iceandfire:armor_blue_helmet
+        iceandfire:armor_bronze_helmet
+        iceandfire:armor_gray_helmet
+        iceandfire:armor_green_helmet
+        iceandfire:armor_red_helmet
+        iceandfire:armor_sapphire_helmet
+        iceandfire:armor_silver_helmet
+        iceandfire:armor_white_helmet
+        iceandfire:deathworm_red_helmet
+        iceandfire:deathworm_white_helmet
+        iceandfire:deathworm_yellow_helmet
+        iceandfire:forest_troll_leather_helmet
+        iceandfire:frost_troll_leather_helmet
+        iceandfire:mountain_troll_leather_helmet
+        iceandfire:tide_blue_helmet
+        iceandfire:tide_bronze_helmet
+        iceandfire:tide_deepblue_helmet
+        iceandfire:tide_green_helmet
+        iceandfire:tide_purple_helmet
+        iceandfire:tide_red_helmet
+        iceandfire:tide_teal_helmet
+        iceandfire:sheep_helmet
+		iceandfire:myrmex_jungle_helmet
+		iceandfire:myrmex_desert_helmet
+		iceandfire:armor_silver_metal_helmet
+		roots:sylvan_helmet
+roots:wildwood_helmet
+erebus:jump_helmet
+erebus:bamboo_helmet
+erebus:rhino_exoskeleton_helmet
+erebus:rein_exoskeleton_helmet
+erebus:exoskeleton_helmet
+erebus:jade_helmet
+compositegear:composite_helmet
+compositegear:composite_heavy_helmet
+compositegear:composite_light_helmet
+compositegear:padded_helmet
+compositegear:felt_helmet
+bloodmagic:sentient_armour_helmet
+bloodmagic:living_armour_helmet
+basemetals:obsidian_helmet
+basemetals:emerald_helmet
+basemetals:quartz_helmet
+basemetals:antimony_helmet
+basemetals:bismuth_helmet
+basemetals:copper_helmet
+basemetals:lead_helmet
+basemetals:nickel_helmet
+basemetals:silver_helmet
+basemetals:tin_helmet
+basemetals:zinc_helmet
+basemetals:brass_helmet
+basemetals:bronze_helmet
+basemetals:cupronickel_helmet
+basemetals:electrum_helmet
+basemetals:invar_helmet
+basemetals:pewter_helmet
+basemetals:steel_helmet
+basemetals:adamantine_helmet
+basemetals:platinum_helmet
+basemetals:starsteel_helmet
+basemetals:aquarium_helmet
+basemetals:mithril_helmet
+twilightforest:ironwood_helmet
+twilightforest:fiery_helmet
+twilightforest:steeleaf_helmet
+twilightforest:knightmetal_helmet
+twilightforest:yeti_helmet
+twilightforest:arctic_helmet
+iymts_mod:rniytamahaganehelmet
+iymts_mod:rniydamascussteelhelmet
+iymts_mod:rniyheavydamascussteelhelmet
      >
 
     # Set to the full IDs of all modded leggings that can be worn over lining up to 3 layers thick (actual max thickness depends on armor piece). Some examples shown. Requires a restart if changed in-game. [default: [basemetals:coldiron_leggings], [cyclicmagic:purple_leggings]]
     S:leggings <
+		toughasnails:jelled_slime_leggings
+		toughasnails:wool_leggings
+        primal:armor_ovis_legs
+		primal:armor_wolf_legs
+		primal:armor_obsidian_legs
         basemetals:coldiron_leggings
         cyclicmagic:purple_leggings
+		compositegear:wool_pants
+erebus:sprint_leggings
+fossil:shin_leggings
+twilightforest:naga_leggings
+        iceandfire:armor_blue_leggings
+        iceandfire:armor_bronze_leggings
+        iceandfire:armor_gray_leggings
+        iceandfire:armor_green_leggings
+        iceandfire:armor_red_leggings
+        iceandfire:armor_sapphire_leggings
+        iceandfire:armor_silver_leggings
+        iceandfire:armor_white_leggings
+        iceandfire:deathworm_red_leggings
+        iceandfire:deathworm_white_leggings
+        iceandfire:deathworm_yellow_leggings
+        iceandfire:forest_troll_leather_leggings
+        iceandfire:frost_troll_leather_leggings
+        iceandfire:mountain_troll_leather_leggings
+        iceandfire:tide_blue_leggings
+        iceandfire:tide_bronze_leggings
+        iceandfire:tide_deepblue_leggings
+        iceandfire:tide_green_leggings
+        iceandfire:tide_purple_leggings
+        iceandfire:tide_red_leggings
+        iceandfire:tide_teal_leggings
+        iceandfire:sheep_leggings
+		iceandfire:myrmex_jungle_leggings
+		iceandfire:myrmex_desert_leggings
+		iceandfire:armor_silver_metal_leggings
+		roots:sylvan_leggings
+roots:wildwood_leggings
+erebus:jump_leggings
+erebus:bamboo_leggings
+erebus:rhino_exoskeleton_leggings
+erebus:rein_exoskeleton_leggings
+erebus:exoskeleton_leggings
+erebus:jade_leggings
+compositegear:composite_leggings
+compositegear:composite_heavy_leggings
+compositegear:composite_light_leggings
+compositegear:padded_leggings
+compositegear:felt_leggings
+bloodmagic:sentient_armour_leggings
+bloodmagic:living_armour_leggings
+basemetals:obsidian_leggings
+basemetals:emerald_leggings
+basemetals:quartz_leggings
+basemetals:antimony_leggings
+basemetals:bismuth_leggings
+basemetals:copper_leggings
+basemetals:lead_leggings
+basemetals:nickel_leggings
+basemetals:silver_leggings
+basemetals:tin_leggings
+basemetals:zinc_leggings
+basemetals:brass_leggings
+basemetals:bronze_leggings
+basemetals:cupronickel_leggings
+basemetals:electrum_leggings
+basemetals:invar_leggings
+basemetals:pewter_leggings
+basemetals:steel_leggings
+basemetals:adamantine_leggings
+basemetals:platinum_leggings
+basemetals:starsteel_leggings
+basemetals:aquarium_leggings
+basemetals:mithril_leggings
+twilightforest:ironwood_leggings
+twilightforest:fiery_leggings
+twilightforest:steeleaf_leggings
+twilightforest:knightmetal_leggings
+twilightforest:yeti_leggings
+twilightforest:arctic_leggings
+iymts_mod:rniytamahaganeleggings
+iymts_mod:rniydamascussteelleggings
+iymts_mod:rniyheavydamascussteelleggings
      >
 }
 
