New set of milestones for eating new foods

--- a/config/solcarrot.cfg
+++ b/config/solcarrot.cfg
@@ -24,8 +24,17 @@ general {
         10
         15
         20
-        25
-		30
+        25 # First set of hearts
+        35
+		45
+		55
+		65
+		75 # Second set of hearts
+		90
+		105
+		120
+		135
+		150 # Third set of hearts
      >
 
     # The minimum hunger value foods need to provide in order to count for milestones, in half drumsticks.
