--- a/config/solcarrot.cfg
+++ b/config/solcarrot.cfg
@@ -24,17 +24,37 @@ general {
         10
         15
         20
-        25 # First set of hearts
+        25 # First set of hearts - gold
         35
-		45
-		55
-		65
-		75 # Second set of hearts
-		90
-		105
-		120
-		135
-		150 # Third set of hearts
+        45
+        55
+        65
+        75 # Second set of hearts - yellow
+        90
+        105
+        120
+        135
+        150 # Third set of hearts - green
+		170
+		190
+		210
+		230
+		250 # Fourth set of hearts
+		275
+		300
+		325
+		350
+		375 # Fifth set of hearts
+		405
+		435
+		465
+		495
+		525 # Sixth set of hearts
+		560
+		595
+		630
+		665
+		700 # Seventh and final set of hearts
      >
 
     # The minimum hunger value foods need to provide in order to count for milestones, in half drumsticks.
